additional explanations for admixture and pca

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -143,13 +143,13 @@ Disease associated markers and their annotated genes were downloaded from the \g
 <!-- > talk about the nice groupings from the pca -->
 
 <!-- > need to explain why K = 6 for the rest of the analysis -->
-In order to confirm that individuals from a population were genetically similar \gls{pca} was performed. It was expected that there would be higher genetic variation between populations, than between individuals of a population. It was also used to confirm if the differences between populations was likely influenced by difference in genotyping platform. The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, and \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)). This confirmed that the genetic variation was higher between populations, than between individuals of a population, and indicated how genetically similar or dis-similar populations were to each other. Populations that were thought to have a large degree of admixture also indicated as such by the spread, and overlap with other better defined clusters. 
+In order to confirm that individuals from a population were genetically similar \gls{pca} was performed. It was expected that there would be higher genetic variation between populations, than between individuals of a population. It was also used to confirm if the differences between populations was likely influenced by difference in genotyping platform. The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, and \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)). This confirmed that the genetic variation was higher between populations, than between individuals of a population, and indicated how genetically similar or dissimilar populations were to each other. Populations that were thought to have a large degree of admixture also indicated as such by the spread, and overlap with other better defined clusters. 
 
 The admixture of the \gls{amr} populations [@1KGP2015snp] was evident in \gls{pc} 1 with a large spread centred with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation. There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data was not a major source of variability in the dataset. 
 
 (ref:allpopPCA) A) Principal components 1 and 2 for all populations. B) Principal components 1 and 3 for all populations. C) Principal components 1 and 4 for all populations. Coloured by super population grouping.
 
-```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE, fig.height = 6, fig.width=5, fig.align='center'}
+```{r allpopPCA, fig.cap = '(ref:allpopPCA)', echo = FALSE, fig.height = 6, fig.width=5, fig.align='center', fig.scap = "Principal components 1 to 4 for all populations."}
 eigen <- read.table('~/data/NZ_coreExome_1kgp/PCA/indiv_pops/NZ_1KGP_allchr_indep_eigen.pca.evec', stringsAsFactors = FALSE)
 
 eigen <- eigen %>% select("sample" = V1, everything()) %>% left_join(., panel, by = 'sample') %>% filter(!pop %in% c('WPN','EPN','NAD'))
@@ -196,7 +196,7 @@ Admixture analysis is a method that can be used to infer the number of ancestral
 
 
 
-To understand the similarities in ancestral background and levels of admixture present at a population level the ancestral proportions for K = 11 were plotted for each individual for each population revealing there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations. \Gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; @Hellenthal2014], but also showed that there were sub-groups within the super-populations. The low level of admixture in the Polynesian populations also indicated it confounding role in subsequent analyses would be minimal.
+To understand the similarities in ancestral background and degree of admixture present at a population level, the ancestral proportions for K = 11 were plotted for each individual for each population revealing there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations. \Gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; @Hellenthal2014], but also showed that there were sub-groups within the super-populations. The low level of admixture in the Polynesian populations also indicated it confounding role in subsequent analyses would be minimal.
 
 
 
@@ -210,7 +210,7 @@ ref_fam <- left_join(ref_fam, panel %>% filter(!pop %in% c('NAD','EPN','WPN','PO
 ```
 
 
-(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE, using K = 11. Ancestral population (AP) represents a particular theoretical ancestral population. Q is the ancestral proportion. Individuals in the sample populations are represented on the x axis.
+(ref:admix) Proportions of ancestral populations as inferred from ADMIXTURE, using K = 11. Ancestral population (AP) represents a particular theoretical ancestral population. Q is the ancestral proportion. Individuals in the sample populations are represented on the x-axis.
 
 ```{r admix, echo = FALSE, fig.height = 8, fig.width = 6, fig.cap = '(ref:admix)', warning=FALSE}
 # barplot of the reference proportions
@@ -251,7 +251,7 @@ rm(ref,ref_fam)
 
 #### Whole chromosome clustering
 
-In order to establish at a summary genome level how similar populations were by selection and neutrality statistic were, clustering on each statistic summarising each chromosome was done. Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations, although it split the \gls{amr} populations into two subgroups. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, (\gls{pel} and \gls{mxl}), and this group was the least similar to the others. There was no clear pattern to the clustering order of \gls{flf}, although it did have a few small groups of the same super population of no more than three individual populations. The \gls{cim} and \gls{sam} populations were grouped together for both statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations as part of it. This indicated that at a summary level many of the populations within a superpopulation were similar to each other.
+In order to establish at a summary genome level how similar populations were by selection and neutrality statistic were, clustering on each statistic summarising each chromosome was done. Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations, although it split the \gls{amr} populations into two subgroups. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, (\gls{pel} and \gls{mxl}), and this group was the least similar to the others. There was no clear pattern to the clustering order of \gls{flf}, although it did have a few small groups of the same super population of no more than three individual populations. The \gls{cim} and \gls{sam} populations were grouped together for both statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations as part of it. This indicated that at a summary level many of the populations within a super population were similar to each other.
 
 ```{r superGlobalSummary, echo = FALSE, results = 'asis'}
 global_super_summary <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/100kbwindows_summary_superpop_popgenome_filtered_3ns_resized.6-11-2017.RDS') %>% filter(stat != 'Fu.Li.D')
